add somes responses
